2008-05-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7.3 released.

2008-04-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* These are fixes of problems on Leopard (Mac OS X 10.5.x).

	* Fix: test/shell.scm, test/httpd.scm, test/dead-lock.scm,
	       test/admin.scm, test/spvr.scm (r3330)
	  Wait child processes (w/ process-wait) appropriately and drop
	  extra sys-sleep.

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm (r3330)
	  Ignore exceptions in some situation.

	* Add: src/kahua/util.scm (r3330)
	  Add a procedure "with-ignoring-exception".

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm (r3329, r3332)
	  Fix wrong use of socket-shutdown's the 2nd argument, and comment
	  its mean (SHUT_RD/SHUT_WR/SHUT_RDWR).

2008-03-06  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.7.2 released.

2008-03-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm, src/kahua/protocol/http.scm
	  Fix that domain cookie attribute was specified unnecessarily.
	  It causes that web browser reject the cookie when request
	  host name contain no ".".  This cookie problem was reported by
	  Kristof Bastiaensen at first,  and was pointed out by
	  Shiro Kawai more clearly.

2008-03-02  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: bug fix reported by Koguro.
	
2008-03-01  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: Some bugs typo and so on.
	       These are all reported by Koguro.
	
2007-12-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Display result evaluated by sending from kahua-mode buffer
	  in mini-buffer when *kahua-shell* buffer isn't displayed
	  in any window.  This patch from Kiyoka Nishiyama. Tnx a lot.

2007-12-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua-server.scm
	  Flush explicitly stdout when they tell their worker-id to
	  kahua-spvr, because of change in Gauche CVS HEAD
	  (src/port.c r1.147).

2007-11-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm