@@ -9,6 +9,7 @@
 ;; $Id: http.scm,v 1.4 2006/10/08 01:36:20 bizenn Exp $
 (define-module kahua.protocol.http
   (use srfi-1)
+  (use srfi-13)
   (use rfc.cookie)
   (use rfc.uri)
   (use util.list)
@@ -128,14 +129,16 @@
   (define (make-cookie e)
     (define (make-karg k v)
       (if v (list k (x->string v)) '()))
+    (define (nonlocal-domain h)
+      (and h (string-index h #\.) h))
     (cons "set-cookie"
 	  (construct-cookie-string
 	   (or (and-let* ((domain (assoc-ref-car kheader "x-kahua-session-domain")))
 		 (receive (scheme _ host port path _ _) (uri-parse domain)
 		   `(("x-kahua-sgsid" ,(cadr e)
-		      ,@(make-karg :domain host)
-		      ,@(make-karg :path path)
-		      ,@(make-karg :port port)
+                      ,@(make-karg :domain (nonlocal-domain host))
+                      ,@(make-karg :path path)
+		      ,@(make-karg :port (or port 80))
 		      ,@(make-karg :secure (equal? "https" scheme))
 		      :discard #t))))
 	       `(("x-kahua-sgsid" ,(cadr e) :discard #t))))))
